minor css changes

--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -10,6 +10,7 @@
         top: 53%;
         opacity: 0;
         font-weight: lighter;
+        text-align: center;
 
         &.animation {
             opacity: 1;
